fix(forge): complete the 1.20.1 migration for Java 17
Register and remap the client Mixins, target Java 17, and replace virtual
threads with bounded gateway workers that preserve bidirectional transfers.
Check the reobfuscated distribution's metadata, refmap, bytecode, and natives.
Correct the Minecraft compatibility range and CurseForge release catalog,
update the Forge documentation, and preserve maintainer commit attribution.

Co-authored-by: Codex <codex@openai.com>